--- a/about.html
+++ b/about.html
@@ -1,95 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<link charset="utf-8" href="screen.css"
-media="screen"
-rel="stylesheet">
-<p><a href="index.html">Home</a></p>
-<p><a href="about.html">About</a></p>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sandy's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="screens.css">
+</head>
+<body>
+    <header>
+        <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
+        <h2 id="about">About</h2>
+    </header>
 
-<h2 id="about">About</h2>
-<img src="/media/self.jpg" alt="salt" width="360" height="360">
+    <main>
+        <img src="/media/self.jpg" alt="self" width="360" height="360">
+        <p>Hello! I’m Sandy, a junior graphic designer based in Philadelphia</p>
+        <p>I’m a junior at Drexel University pursuing a major in Graphic Design and a minor in User Experience and Interaction and Fine Arts.</p>
+        <p>My goal is to inspire positive change in people&#39;s lives through innovative and compassion-driven designs.</p>
+        <p>Graphic design is almost always somewhere around us, it struck me to how life-changing and important design truly is! As someone who was always taught and interested in traditional art, graphics was cool because it combined both traditional art and the growing digital world. Being able to allow artists to story-tell and convey strong messages through visual and mental aspects, I felt a sense of comfort and balance in this space.</p>
+        <p>
+            <a href="https://www.instagram.com/sndyf1sh/">Instagram</a>
+            <a href="www.linkedin.com/in/sanch805">LinkedIn</a>
+            <a href="mailto:sanche0485@gmail.com">Email</a>
+        </p>
 
-    <p>Hello! I’m Sandy, a junior graphic designer based in Philadelphia</p>
-    <p>I’m a junior at Drexel University pursuing a major in Graphic Design and a minor in User Experience and Interaction and Fine Arts. </p>
-    <p>My goal is to inspire positive change in people&#39;s lives through innovative and compassion-driven designs.</p>
-    <p>Graphic design is almost always somewhere around us, it struck me to how life-changing and important design truly is! As someone who was always taught and interested in traditional art, graphics was cool because it combined both traditional art and the growing digital world. Being able to allow artists to story-tell and convey strong messages through visual and mental aspects, I felt a sense of comfort and balance in this space.</p>
-    </ul>
-    <p><a href="https://www.instagram.com/sndyf1sh/">Instagram</a>
-    <br/>
-    <a href="www.linkedin.com/in/sanch805">LinkedIn</a>
-    <br/>
-    <a href="mailto:sanche0485@gmail.com">Email</a></p>
-    <h2 id="resume">Resume</h2>
-    <h3 id="education">Education</h3>
-    <p><strong>Drexel University</strong> | EXPECTED JUNE 2026
-    <br/>
-    Bachelor of Science in Graphic Design
-    Minor User Interface and Experience
-    Minor Fine Arts
-    <br/>GPA: 3.9</p>
-    <h3 id="skills">Skills</h3>
-    <p><strong>Design Programs:</strong></p>
-    <p>Figma, Webflow, Procreate, Adobe Illustrator, Adobe Photoshop, Adobe After Effects, Adobe InDesign, HTML, CSS, JS, Canva</p>
-    <h3 id="relevant-coursework">Relevant Coursework</h3>
-    <ul>
-    <li>Introduction to Graphic Design</li>
-    <li>Typography I &amp; II &amp; III</li>
-    <li>Web Graphics I &amp; II &amp; III</li>
-    <li>Design I &amp; II &amp; III</li>
-    <li>Intermediate Photography</li>
-    <li>User Interface Design I &amp; II</li>
-    <li>Foundations of Business</li>
-    </ul>
-    <h3 id="experience">Experience</h3>
-    <p><strong>Jollibee</strong> | Philadelphia, PA
-    Crew Member (MAR 2024 - PRESENT)</p>
-    <ul>
-    <li>Process cash and credit transactions in a 
-    fast-paced, high-volume restaurant 
-    setting, and was recognized for a high 
-    customer satisfaction rating</li>
-    <li>Engage interpersonal and POS system 
-    skills to efficiently assist customers in 
-    ordering, and assembling orders </li>
-    </ul>
-    <p><strong>Mr. Wish</strong> | Philadelphia, PA
-    Barista &amp; Trainer (SEP 2022 - MAY 2024)</p>
-    <ul>
-    <li>Oversee and train crew members, and maintain 
-    menu items, supplies, and store environment</li>
-    <li>Handle POS systems, online orders, and 
-    assembling orders in a timely and swift 
-    manner while ensuring customer satisfaction </li>
-    </ul>
-    <p><strong>Smart Scribe</strong> | Baldwin, NY
-    Youth Tutor (JAN 2022 - JUL 2022)</p>
-    <ul>
-    <li>Collaborated with students to complete 
-    assignments and identify areas of growth 
-    by preparing lesson plans based on the 
-    individual students </li>
-    <li>Motivated students towards learning and 
-    studying to build self-confidence and
-    reduce fear of failure</li>
-    </ul>
-    <h3 id="projects">Projects</h3>
-    <p><strong>Westphal College of Media Arts &amp; Design 
-    Instagram Takeover Project</strong>
-    Designer (JAN 2024 - PRESENT)</p>
-    <ul>
-    <li>Designed a series of connected posters, posts, 
-    and presentations for Drexel Westphal’s annual Instagram Takeover</li>
-    </ul>
-    <p><strong>Persephone Books Brand &amp; Logo Redesign</strong>
-    Researcher &amp; Designer (JAN 2024 - MAR 2024)</p>
-    <ul>
-    <li>Redesigned the logo and brand for a UK-based publishing house. Additionally redesigned into a 
-    Figma prototyped website and mobile working experience afterward</li>
-    </ul>
-    <p><strong>Westphal Pop-Up Shop T-Shirt &amp; Sticker Design</strong>
-    Designer (AUG 2023 - JAN 2024)</p>
-    <ul>
-    <li>Designed an original work to represent Drexel’s 
-    Performing Arts Program, and a sticker design 
-    to represent Drexel University.</li>
-    </ul>
+        <h2 id="resume">Resume</h2>
+        <h3 id="education">Education</h3>
+        <p><strong>Drexel University</strong> | EXPECTED JUNE 2026
+            <br>
+            Bachelor of Science in Graphic Design
+            <br>
+            Minor User Interface and Experience
+            <br>
+            Minor Fine Arts
+            <br>GPA: 3.9
+        </p>
+
+        <h3 id="experience">Experience</h3>
+        <p><strong>The Antoinette Westphal College of Media Arts & Design</strong> | Philadelphia, PA
+            <br> Work Study (JAN 2024 - PRESENT)</p>
+        <ul>
+            <li>Designed and produced digital and print materials (e.g., posters, flyer, social media content) for university departments, ensuring alignment with institutional branding and visual guidelines.</li>
+        </ul>
+        <p><strong>Smart Scribe</strong> | Baldwin, NY
+            <br> Youth Tutor (JAN 2022 - JUL 2022)</p>
+        <ul>
+            <li>Collaborated with students to complete assignments while identifying and tailoring lesson plans based on the individual needs</li>
+        </ul>
+
+        <h3 id="projects">Projects</h3>
+        <p><strong>Westphal College of Media Arts &amp; Design Instagram Takeover Project</strong>
+            Designer (JAN 2024 - PRESENT)</p>
+        <ul>
+            <li>Designed a series of connected posters, posts, and presentations for Drexel Westphal’s annual Instagram Takeover</li>
+        </ul>
+        <p><strong>Persephone Books Brand &amp; Logo Redesign</strong>
+            Researcher &amp; Designer (JAN 2024 - MAR 2024)</p>
+        <ul>
+            <li>Redesigned the logo and brand for a UK-based publishing house. Additionally redesigned into a Figma prototyped website and mobile working experience afterward</li>
+        </ul>
+        <p><strong>Westphal Pop-Up Shop T-Shirt &amp; Sticker Design</strong>
+            Designer (AUG 2023 - JAN 2024)</p>
+        <ul>
+            <li>Designed an original work to represent Drexel’s Performing Arts Program, and a sticker design to represent Drexel University.</li>
+        </ul>
+    </main>
+    
+    <footer>
+        <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
+        <p>&copy; 2024</p>
+    </footer>
+</body>
+</html>
