--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<link charset="utf-8" href="style.css"
-media="screen"
-rel="stylesheet">
-
-<p><a href="index.html">Home</a></p>
-<p><a href="about.html">About</a></p>
+<media charset="utf-8">
+<link rel="stylesheet" type="text/css" href="screens.css" media="screen">
 
  <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
  <p>Hey! I&#39;m Sandy, a junior graphic &amp; UI/UX designer 
@@ -24,10 +20,8 @@ rel="stylesheet">
     <h3><a href="salt.html">Coffee Editorial</a></h3>
     <p>Indesign, Photoshop, Illustrator</p>
     <img src="/media/coffee_mockup.jpg" alt="salt" width="360" height="250">
-
-    <h3>Coming Soon</h3>
-    <img src="/media/wilma_cover.jpg" alt="wilma" width="360" height="250">
     
   <footer>
+    <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
     <p>© 2024 Sandy Chen</p>
   </footer>
