--- a/persephone.html
+++ b/persephone.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<link charset="utf-8" href="style.css"
-media="screen"
-rel="stylesheet">
-<p><a href="index.html">Home</a></p>
-<p><a href="about.html">About</a></p>
+<media charset="utf-8">
+<link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+
+<h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
 <h2 id="persephone-books">Persephone Books</h2>
 <img src="/media/pb_cover.jpg" alt="salt" width="360" height="250">
 
@@ -32,5 +31,8 @@ My goal when redesigning their logo and brand identity was to create something s
 <img src="/media/pb_bag.png" alt="salt" width="360" height="250">
 <img src="/media/pb_stationary.png" alt="salt" width="360" height="250">
 
-<h3><a href="ikea.html">Previous: IKEA</a></h3>
-<h3><a href="salt.html">Next: Coffee Editorial</a></h3>
+<footer>
+    <h4><a href="craigslist.html">Previous: Craigslist</a> <a href="salt.html">Next: Coffee Editorial</a></h4>
+    <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
+    <p>© 2024 Sandy Chen</p>
+</footer>
