--- a/salt.html
+++ b/salt.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<link charset="utf-8" href="style.css"
-media="screen"
-rel="stylesheet">
-<p><a href="index.html">Home</a></p>
-<p><a href="about.html">About</a></p>
+ <media charset="utf-8">
+<link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+
+<h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
 <h2 id="salt-editorial">SALT Editorial</h2>
 <img src="/media/coffee_mockup.jpg" alt="salt" width="360" height="250">
 
@@ -26,5 +25,8 @@ The first couple weeks were rough, as I didn&#39;t really have a specific direct
 <br><strong>Changes?:</strong> If I could, I think I would&#39;ve liked to add more pages to my publication. I feel the article I received was a bit short and with a couple more pages, I would&#39;ve able to explore/experience more typographic variations and visual language. This and I would&#39;ve liked to try making a publication with my own media. </li>
 <br>Overall, I believe I learned a great deal through this project. On top of this, I am greatly satisfied with the end result of my publication and how it turned out. I believe that while not without flaws, I was able to achieve the goals I had set for myself in the beginning of this project and class. 
 
-<h3><a href="persephone.html">Previous: Persephone Books</a></h3>
-<h3><a href="craigslist.html">Next: Craigslist</a></h3>
+<footer>
+    <h4><a href="persephone.html">Previous: Persephone Books</a> <a href="craigslist.html">Next: Craigslist</a></h4>
+    <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
+    <p>© 2024 Sandy Chen</p>
+</footer>
