--- a/craigslist.html
+++ b/craigslist.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<link charset="utf-8" href="style.css"
-media="screen"
-rel="stylesheet">
-<p><a href="index.html">Home</a></p>
-<p><a href="about.html">About</a></p>
+ <media charset="utf-8">
+ <link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+
+<h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
 <h2 id="craigslist">Craigslist</h2>
 <img src="/media/craigs_cover.jpg" alt="salt" width="360" height="250">
+<main>
 <p><strong>Onboarding Flow</strong></p>
 <p>Enhancing navigation features for Craigslist’s online site and mobile app
 <br/>
@@ -54,6 +54,10 @@ Lacking in:
 <strong>What I Learned:</strong> Through this project, I was able to learn more about components and auto-layout in Figma. I was also able to better use prototyping like input/output in text area. Lastly, I learned how usability and function is more important than the visuals/what users actually look for/rely on in a app/website setting.</li>
 <br><strong>Changes?:</strong> If I was given more time on this project, I would have liked to explore add more content in all of my sections. I also would’ve liked to experiment more with prototyping and if possible, I would’ve add two more screens, one screen that actually covers all the sections on Craigslist’s original site and the second screen, a location screen so that users can know that their sellers aren’t scammers.</li>
 <br>All in all, I believe this project really helped me learn about the research involved in User Experience (UX). It underscored the importance of user-centered design and provided me with practical skills in Figma and prototyping that I can apply to future projects. The hands-on experience in balancing usability with visual elements has been invaluable, making me into a more thoughtful and effective designer.
+</main>
 
-<h3><a href="salt.html">Previous: Coffee Editorial</a></h3>
-<h3><a href="environmental.html">Next: Environmental Editorial</a></h3>
+<footer>
+    <h4><a href="salt.html">Previous: Coffee Editorial</a> <a href="persephone.html">Next: Persephone Books</a></h4>
+    <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
+    <p>© 2024 Sandy Chen</p>
+</footer>
