--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
 <link rel="stylesheet" type="text/css" href="screens.css" media="screen">
 
  <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
- <p>Hey! I&#39;m Sandy, a junior graphic &amp; UI/UX designer 
-    <br/>Transforming imagination to design, one graphic at a time</p>
+ <h4>Hey! I&#39;m Sandy, a junior graphic &amp; UI/UX designer 
+    <br/>Transforming imagination to design, one graphic at a time</h4>
 
 <h3><a href="craigslist.html">Flow (Craigslist App and Website Redesign)</a></h3>
     <p>Redesigning their system for better navigation and flow
     <br>Figma, Canva, Optimal Workshop</br></p>
-    <img src="/media/craigs_cover.jpg" alt="salt" width="360" height="250">
+    <img src="/media/craigs_cover.jpg" alt="craigs_cover" width="900" height="600">
 
     <h3><a href="persephone.html">Brand &amp; Web Redesign (Persephone Books)</a></h3>
     <p>Redesigning their logo and brand; redesigning their website
     <br>Illustrator, Photoshop, Figma</br></p>
-    <img src="/media/pb_cover.jpg" alt="salt" width="360" height="250">
-  
+    <img src="/media/pb_cover.jpg" alt="persephone-books" width="900" height="600">
+    
     <h3><a href="salt.html">Coffee Editorial</a></h3>
     <p>Indesign, Photoshop, Illustrator</p>
-    <img src="/media/coffee_mockup.jpg" alt="salt" width="360" height="250">
+    <img src="/media/coffee_mockup.jpg" alt="salt" width="900" height="600">
     
   <footer>
+    <br>
     <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
+    <br>
     <p>© 2024 Sandy Chen</p>
   </footer>
