--- a/persephone.html
+++ b/persephone.html
@@ -5,7 +5,7 @@
 
 <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
 <h2 id="persephone-books">Persephone Books</h2>
-<img src="/media/pb_cover.jpg" alt="salt" width="360" height="250">
+<img src="/media/pb_cover.jpg" alt="salt" width="900" height="600">
 
 <h3><strong>Persephone Books — Graphic Design</strong></h3>
 <p>Redesigning the logo and rebranding for Persephone Books; creating a responsive website, tablet, and mobile design based on the redesigns
@@ -14,7 +14,7 @@
 <br/>Timeline: 10 weeks
 <br/>Tools: Figma, Illustrator, Photoshop</p>
 <p>Overview: Persephone Books is a UK-based publishing house and bookstore that reprints neglected fiction and non-fiction, mostly by women writers and mostly dating from the mid-twentieth century. The founder of Persephone Books, Nicola Beauman started their journey in 1999.</p>
-<h3><strong>The Problem:</strong></h3>
+<br><h3><strong>The Problem:</strong></h3>
 
 <strong>Graphic Design Aspect:</strong> Persephone Books’ original logo is very simple — it’s a simple image of Persephone — but it didn’t seem like a logo that could be seen as their mark.
 <br><strong>UI/UX Aspect:</strong> While what they have functioned properly, I wanted to redesign the Persephone Books experience to fit in visually with modern design. Regarding Persephone Books’ current website, my problem with their site is that the contents are cluttered and repetitive, which can contribute to a potentially overwhelming experience for users. Additionally, in both their website and mobile versions, their information hierarchy is really messy, so I wanted to clear that up a bit so that users can have an easier time navigating both platforms.
@@ -26,13 +26,13 @@ My goal when redesigning their logo and brand identity was to create something s
 <br><strong>Changes?:</strong> If I was given another chance to redesign this project, I think I would want to experiment more with making a site and app that sticks to Persephone Book’s original concept and style. I think that on their original site, they do have a really nice vintage vibe to it, and I would love to experiment with that style if given another chance. </li>
 <br>Overall, I really like how my final redesign turned out. I feel like I learned a lot through this project and the rebranding and redesigning of this company is something I really enjoyed this quarter. I feel that while I did change many things about about Persephone Books’ brand, it was through this that I was able to step out of the box more and experiment with different features and looks for a app and site design. I believe that my redesign does look a lot more organized and less cluttered, and while it’s not perfect and there could be more smaller details added, for now, I am enjoying what I have.</li>
 </ul>
-<img src="/media/pb_process.png" alt="salt" width="360" height="250">
-<img src="/media/pb_book.png" alt="salt" width="360" height="250">
-<img src="/media/pb_bag.png" alt="salt" width="360" height="250">
-<img src="/media/pb_stationary.png" alt="salt" width="360" height="250">
+<img src="/media/pb_process.png" alt="salt" width="900" height="600">
+<img src="/media/pb_book.png" alt="salt" width="900" height="600">
+<img src="/media/pb_bag.png" alt="salt" width="900" height="600">
+<img src="/media/pb_stationary.png" alt="salt" width="900" height="600">
 
 <footer>
-    <h4><a href="craigslist.html">Previous: Craigslist</a> <a href="salt.html">Next: Coffee Editorial</a></h4>
-    <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
-    <p>© 2024 Sandy Chen</p>
+    <br><h4><a href="craigslist.html">Previous: Craigslist</a> <a href="salt.html">Next: Coffee Editorial</a></h4>
+    <br><p><a href="index.html">Home</a> <a href="about.html">About</a></p>
+    <br><p>© 2024 Sandy Chen</p>
 </footer>
