--- a/salt.html
+++ b/salt.html
@@ -5,7 +5,7 @@
 
 <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
 <h2 id="salt-editorial">SALT Editorial</h2>
-<img src="/media/coffee_mockup.jpg" alt="salt" width="360" height="250">
+<img src="/media/coffee_mockup.jpg" alt="salt" width="900" height="600">
 
 <h3><strong>The Health Benefits of Coffee</strong></h3>
 <p>Designing editorial spreads for a magazine through content development, masthead and cover development and refinement. 
@@ -26,7 +26,7 @@ The first couple weeks were rough, as I didn&#39;t really have a specific direct
 <br>Overall, I believe I learned a great deal through this project. On top of this, I am greatly satisfied with the end result of my publication and how it turned out. I believe that while not without flaws, I was able to achieve the goals I had set for myself in the beginning of this project and class. 
 
 <footer>
-    <h4><a href="persephone.html">Previous: Persephone Books</a> <a href="craigslist.html">Next: Craigslist</a></h4>
-    <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
-    <p>© 2024 Sandy Chen</p>
+    <br><h4><a href="persephone.html">Previous: Persephone Books</a> <a href="craigslist.html">Next: Craigslist</a></h4>
+    <br><p><a href="index.html">Home</a> <a href="about.html">About</a></p>
+    <br><p>© 2024 Sandy Chen</p>
 </footer>
