--- a/craigslist.html
+++ b/craigslist.html
@@ -5,7 +5,8 @@
 
 <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
 <h2 id="craigslist">Craigslist</h2>
-<img src="/media/craigs_cover.jpg" alt="salt" width="360" height="250">
+<img src="/media/craigs_cover.jpg" alt="craigslist" width="900" height="600">
+
 <main>
 <p><strong>Onboarding Flow</strong></p>
 <p>Enhancing navigation features for Craigslist’s online site and mobile app
@@ -14,14 +15,13 @@
 <br/>Timeline: 20 weeks
 <br/>Tools: Figma, Canva, Optimal Workshop</p>
 <p>Overview: Craigslist is a advertising company that operates an advertisement website with sections devoted to jobs, housing, for sale, items wanted, services, community service, gigs, résumés, and discussion forums. Known as a online marketplace, people often find themselves going on Craigslist to look, sell, or buy things locally. </p>
+<br>
 <p><strong>The Problem:</strong> </p>
-<ul>
-<li>On Craigslist’s website, they seem to be unable to keep up with the modern design world. Its website lacks an organized space and embodies the representation of an outdated 2000s website. Along with this, Craigslist also lacks the features and aspects of easily navigable categories. Additionally, for inexperienced users, Craigslist can be overwhelming as a sheer volume of options, coupled with vague subcategories, can easily lead to mistakes. Conversely, experienced users who have spent years navigating Craigslist&#39;s virtual marketplace have developed a better understanding of its features. Meanwhile their mobile app faces the same problems with two other problems, these being that it’s hard to contact/communicate with sellers/listers, and the fact that it’s hard to trust sellers. Through this project, I wanted to better improve Craigslist’s navigation system and their overall visual design.</li>
-</ul>
+On Craigslist’s website, they seem to be unable to keep up with the modern design world. Its website lacks an organized space and embodies the representation of an outdated 2000s website. Along with this, Craigslist also lacks the features and aspects of easily navigable categories. Additionally, for inexperienced users, Craigslist can be overwhelming as a sheer volume of options, coupled with vague subcategories, can easily lead to mistakes. Conversely, experienced users who have spent years navigating Craigslist&#39;s virtual marketplace have developed a better understanding of its features. Meanwhile their mobile app faces the same problems with two other problems, these being that it’s hard to contact/communicate with sellers/listers, and the fact that it’s hard to trust sellers. Through this project, I wanted to better improve Craigslist’s navigation system and their overall visual design.
+<br>
 <p><strong>My Goal:</strong></p>
-<ul>
-<li>To solve this problem, I set out to minimize how many sections they had. To do this, I arranged for the head sections like jobs, housing, community, etc. to be the main focus. To make navigation for Craigslist easier, I added features like how-to steps, a more navigable chat system to buy things, and a neater homepage and products page. Additionally, by adding features like pill buttons and component cards, I was able to add a modern visual to the redesign. To solve the problem with communicating with sellers/listers, I made a chat system where you can easily contact them without giving away any unnecessary private information. Meanwhile, for trust issues, I thought of resolving this by making a rating system for sellers. </li>
-</ul>
+To solve this problem, I set out to minimize how many sections they had. To do this, I arranged for the head sections like jobs, housing, community, etc. to be the main focus. To make navigation for Craigslist easier, I added features like how-to steps, a more navigable chat system to buy things, and a neater homepage and products page. Additionally, by adding features like pill buttons and component cards, I was able to add a modern visual to the redesign. To solve the problem with communicating with sellers/listers, I made a chat system where you can easily contact them without giving away any unnecessary private information. Meanwhile, for trust issues, I thought of resolving this by making a rating system for sellers. 
+<br>
 <h3><strong>Heuristic Evaluation:</strong></h3>
 Compared with the original Craigslist site and app, my strengths are:
 <ul>
@@ -34,30 +34,37 @@ Lacking in:
     <li>Navigation</li>
 </ul>
 <p>From this I think I should focus more on making the app more navigable with the goal of making users focus on the task at hand, which is either shopping or selling listings. </p>
+<br>
 <h3><strong>Onboarding Process:</strong></h3>
+<br>
 <ul>
-<li>These are my opening onboarding screens where you can make your account or log in. I wanted it to be very simplistic but also easy to understand, thus I assigned big letterings to greet users and a purple color assigned to buttons so that users would understand what is interactive and what isn’t. </li>
-<img src="/media/1.png" alt="salt" width="360" height="250">
-<li>After the initial logging in, users are then lead to a 4-step how-to screen. </li>
-<img src="/media/2.png" alt="salt" width="360" height="250">
-<li>Easier Navigation : Making buying/selling easier by adding: Category pills; Component cards for products; A clear hierarchy in the bottom tab bar; Clear color hierarchy</li>
-<img src="/media/3.png" alt="salt" width="360" height="250">
-<li>Easier Navigation 2: Similar to the last one, I focused on navigation and just over visual design. Some features on this page include: Easy to read text and description on product; A viewable rating/review profile for sellers; Location viewability; Comments for users to engage with each other or the seller</li>
-<img src="/media/4.png" alt="salt" width="360" height="250">
-<li>Messaging System & Visuals: This feature refers to one of the solutions I had mentioned for the problem with difficult communication between users. A messaging issue can help with safety and security issues. It can also resolve navigation issues as you can just stay on the app, instead of going to other different apps just to contact other users. Visually-wise, I wanted to point out these two screens because they showcase my ideas on making Craigslist more visually modern. Features: Pills, filtering, component cards, clear buttons/sections </li>
- <img src="/media/5.png" alt="salt" width="360" height="250">
+These are my opening onboarding screens where you can make your account or log in. I wanted it to be very simplistic but also easy to understand, thus I assigned big letterings to greet users and a purple color assigned to buttons so that users would understand what is interactive and what isn’t. 
+<img src="/media/1.png" alt="salt" width="900" height="600">
+After the initial logging in, users are then lead to a 4-step how-to screen.
+<img src="/media/2.png" alt="salt" width="900" height="600">
+Easier Navigation : Making buying/selling easier by adding: Category pills; Component cards for products; A clear hierarchy in the bottom tab bar; Clear color hierarchy
+<img src="/media/3.png" alt="salt" width="900" height="600">
+Easier Navigation 2: Similar to the last one, I focused on navigation and just over visual design. Some features on this page include: Easy to read text and description on product; A viewable rating/review profile for sellers; Location viewability; Comments for users to engage with each other or the seller
+<img src="/media/4.png" alt="salt" width="900" height="600">
+Messaging System & Visuals: This feature refers to one of the solutions I had mentioned for the problem with difficult communication between users. A messaging issue can help with safety and security issues. It can also resolve navigation issues as you can just stay on the app, instead of going to other different apps just to contact other users. Visually-wise, I wanted to point out these two screens because they showcase my ideas on making Craigslist more visually modern. Features: Pills, filtering, component cards, clear buttons/sections 
+ <img src="/media/5.png" alt="salt" width="900" height="600">
 </ul>
 
- <img src="/media/craigs_laptop.png" alt="salt" width="360" height="250">
- <img src="/media/craigs_phone.png" alt="salt" width="360" height="250">
+ <img src="/media/craigs_laptop.png" alt="salt" width="900" height="600">
+ <img src="/media/craigs_phone.png" alt="salt" width="900" height="600">
 <h3><strong>Reflections:</strong></h3>
+<br>
 <strong>What I Learned:</strong> Through this project, I was able to learn more about components and auto-layout in Figma. I was also able to better use prototyping like input/output in text area. Lastly, I learned how usability and function is more important than the visuals/what users actually look for/rely on in a app/website setting.</li>
+<br>
 <br><strong>Changes?:</strong> If I was given more time on this project, I would have liked to explore add more content in all of my sections. I also would’ve liked to experiment more with prototyping and if possible, I would’ve add two more screens, one screen that actually covers all the sections on Craigslist’s original site and the second screen, a location screen so that users can know that their sellers aren’t scammers.</li>
+<br>
 <br>All in all, I believe this project really helped me learn about the research involved in User Experience (UX). It underscored the importance of user-centered design and provided me with practical skills in Figma and prototyping that I can apply to future projects. The hands-on experience in balancing usability with visual elements has been invaluable, making me into a more thoughtful and effective designer.
 </main>
-
+<br>
 <footer>
     <h4><a href="salt.html">Previous: Coffee Editorial</a> <a href="persephone.html">Next: Persephone Books</a></h4>
+    <br>
     <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
+    <br>
     <p>© 2024 Sandy Chen</p>
 </footer>
