--- a/persephone.html
+++ b/persephone.html
@@ -1,38 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<media charset="utf-8">
-<link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+    <title>Sandy's Portfolio - Persephone Books</title>
+</head>
+<body>
+    <header>
+        <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
+        <h2 id="persephone-books">Persephone Books</h2>
+        <img src="/media/pb_cover.jpg" alt="Persephone Books Cover" width="900" height="600">
+    </header>
 
-<h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
-<h2 id="persephone-books">Persephone Books</h2>
-<img src="/media/pb_cover.jpg" alt="salt" width="900" height="600">
+    <main>
+        <section>
+            <h3><strong>Persephone Books — Graphic Design</strong></h3>
+            <p>
+                Redesigning the logo and rebranding for Persephone Books; creating a responsive website, tablet, and mobile design based on the redesigns.
+                <br><strong>Role:</strong> Junior Graphic Designer
+                <br><strong>Timeline:</strong> 10 weeks
+                <br><strong>Tools:</strong> Figma, Illustrator, Photoshop
+            </p>
+            <p>
+                <strong>Overview:</strong> Persephone Books is a UK-based publishing house and bookstore that reprints neglected fiction and non-fiction, mostly by women writers, mostly dating from the mid-twentieth century. The founder, Nicola Beauman, started their journey in 1999.
+            </p>
+        </section>
 
-<h3><strong>Persephone Books — Graphic Design</strong></h3>
-<p>Redesigning the logo and rebranding for Persephone Books; creating a responsive website, tablet, and mobile design based on the redesigns
-<br/>
-<br/>Role: Junior Graphic Designer
-<br/>Timeline: 10 weeks
-<br/>Tools: Figma, Illustrator, Photoshop</p>
-<p>Overview: Persephone Books is a UK-based publishing house and bookstore that reprints neglected fiction and non-fiction, mostly by women writers and mostly dating from the mid-twentieth century. The founder of Persephone Books, Nicola Beauman started their journey in 1999.</p>
-<br><h3><strong>The Problem:</strong></h3>
+        <section>
+            <h3><strong>The Problem</strong></h3>
+            <p>
+                <strong>Graphic Design Aspect:</strong> Persephone Books’ original logo is very simple — it’s an image of Persephone — but it didn’t seem iconic enough to be a recognizable mark.
+            </p>
+            <p>
+                <strong>UI/UX Aspect:</strong> The current website's cluttered and repetitive content, combined with a messy information hierarchy, creates a potentially overwhelming experience. The goal was to enhance the website and app's visual design while improving navigation and usability.
+            </p>
+        </section>
 
-<strong>Graphic Design Aspect:</strong> Persephone Books’ original logo is very simple — it’s a simple image of Persephone — but it didn’t seem like a logo that could be seen as their mark.
-<br><strong>UI/UX Aspect:</strong> While what they have functioned properly, I wanted to redesign the Persephone Books experience to fit in visually with modern design. Regarding Persephone Books’ current website, my problem with their site is that the contents are cluttered and repetitive, which can contribute to a potentially overwhelming experience for users. Additionally, in both their website and mobile versions, their information hierarchy is really messy, so I wanted to clear that up a bit so that users can have an easier time navigating both platforms.
+        <section>
+            <h3><strong>My Goal</strong></h3>
+            <p>
+                For the logo redesign, I aimed to create a simple, iconic mark that could also work on a book spine. Initially, I explored combining Persephone and books but ultimately focused on Persephone alone to retain simplicity. On the website and app redesign, I aimed to simplify the information hierarchy, reduce clutter, and establish a user-friendly environment. This included grouping repetitive content into broader categories and improving the overall visual design.
+            </p>
+        </section>
 
-<h3><strong>My Goal:</strong></h3>
-My goal when redesigning their logo and brand identity was to create something simple and mark-like. The reference and limit I set myself too was to make a logo that I could see on a book spine. At first, I wanted to work with combining Persephone and books — a literal meaning of their house name — but later decided to keep it to just Persephone, somewhat like their original logo. My primary goal when redesigning their website was to enhance the visual design of the app, reduce some of its clutter, and reorganize the information hierarchy. My aim was to enhance the placement of content to establish a user-friendly environment, ensuring effortless navigation for app and site users. To achieve this, I focused on removing some of their repetitive contents and categories, and instead grouping them into broader sectors. The updated layout intends to simplify information delivery, enhancing user experience by keeping a visually pleasing display. By refining the app and site’s visual hierarchy and content structure, I am confident that the proposed redesign can greatly enhance overall user satisfaction.
-<h3><strong>Reflections:</strong> </h3>
-<strong>What I Learned:</strong> Through this project, I was able to get a better understanding of the concepts of auto-layout, components, and responsive vs. unresponsive screens. This project also allowed me to use and know more about style guides, variables, and how they can make redesigning a project much more easier. </li>
-<br><strong>Changes?:</strong> If I was given another chance to redesign this project, I think I would want to experiment more with making a site and app that sticks to Persephone Book’s original concept and style. I think that on their original site, they do have a really nice vintage vibe to it, and I would love to experiment with that style if given another chance. </li>
-<br>Overall, I really like how my final redesign turned out. I feel like I learned a lot through this project and the rebranding and redesigning of this company is something I really enjoyed this quarter. I feel that while I did change many things about about Persephone Books’ brand, it was through this that I was able to step out of the box more and experiment with different features and looks for a app and site design. I believe that my redesign does look a lot more organized and less cluttered, and while it’s not perfect and there could be more smaller details added, for now, I am enjoying what I have.</li>
-</ul>
-<img src="/media/pb_process.png" alt="salt" width="900" height="600">
-<img src="/media/pb_book.png" alt="salt" width="900" height="600">
-<img src="/media/pb_bag.png" alt="salt" width="900" height="600">
-<img src="/media/pb_stationary.png" alt="salt" width="900" height="600">
+        <section>
+            <h3><strong>Reflections</strong></h3>
+            <p>
+                <strong>What I Learned:</strong> This project enhanced my understanding of auto-layout, components, responsive design, and the importance of style guides and variables. These tools streamlined the redesign process and made iterations easier.
+            </p>
+            <p>
+                <strong>Changes?</strong> If given another chance, I would explore designs that retain Persephone Books' vintage aesthetic while modernizing functionality. I appreciate the vintage charm of their current branding and would love to experiment with merging that style with my redesign concepts.
+            </p>
+            <p>
+                Overall, I’m proud of how this project turned out. It pushed me to think outside the box and experiment with various features and designs. While there’s room for improvement, I believe my redesign effectively organizes the content and enhances usability while maintaining an aesthetically pleasing design.
+            </p>
+        </section>
 
-<footer>
-    <br><h4><a href="craigslist.html">Previous: Craigslist</a> <a href="salt.html">Next: Coffee Editorial</a></h4>
-    <br><p><a href="index.html">Home</a> <a href="about.html">About</a></p>
-    <br><p>© 2024 Sandy Chen</p>
-</footer>
+        <section>
+            <h3><strong>Process and Deliverables</strong></h3>
+            <img src="/media/pb_process.png" alt="Design Process" width="900" height="600">
+            <img src="/media/pb_book.png" alt="Book Design" width="900" height="600">
+            <img src="/media/pb_bag.png" alt="Bag Design" width="900" height="600">
+            <img src="/media/pb_stationary.png" alt="Stationery Design" width="900" height="600">
+        </section>
+    </main>
+
+    <footer>
+        <p>
+            <a href="craigslist.html">Previous: Craigslist</a> | 
+            <a href="salt.html">Next: Coffee Editorial</a>
+        </p>
+        <p>
+            <a href="index.html">Home</a> | 
+            <a href="about.html">About</a>
+        </p>
+        <p>© 2024 Sandy Chen</p>
+    </footer>
+</body>
+</html>
