--- a/salt.html
+++ b/salt.html
@@ -1,32 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
- <media charset="utf-8">
-<link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+    <title>Sandy's Portfolio - SALT Editorial</title>
+</head>
+<body>
+    <header>
+        <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
+        <h2 id="salt-editorial">SALT Editorial</h2>
+        <img src="/media/coffee_mockup.jpg" alt="Coffee Mockup for SALT Editorial" width="900" height="600">
+    </header>
 
-<h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
-<h2 id="salt-editorial">SALT Editorial</h2>
-<img src="/media/coffee_mockup.jpg" alt="salt" width="900" height="600">
+    <main>
+        <section>
+            <h3><strong>The Health Benefits of Coffee</strong></h3>
+            <p>
+                Designing editorial spreads for a magazine through content development, masthead, and cover refinement.
+                <br><strong>Role:</strong> Sophomore Graphic Designer
+                <br><strong>Timeline:</strong> 10 weeks
+                <br><strong>Tools:</strong> InDesign, Illustrator, Photoshop
+            </p>
+            <p>
+                <strong>Overview:</strong> With a randomized publication name and article, this project allowed experimentation and gave insights into the process of making and designing a magazine editorial.
+            </p>
+        </section>
 
-<h3><strong>The Health Benefits of Coffee</strong></h3>
-<p>Designing editorial spreads for a magazine through content development, masthead and cover development and refinement. 
-<br/>
-<br/> Role: Sophmore Graphic Designer
-<br/> Timeline: 10 weeks
-<br/> Tools: InDesign, Illustrator, Photoshop</p>
-<p>Overview: With a randomized publication name and article, this project allowed us to experiment and experience the process of makingand designing a magazine editorial.</p>
-<h3><strong>My Goals:</strong> </h3>
-After getting my publication name and article which both focused on the food industry, I decided to make my editorial food and wellness focused. My goal throughout this project was to learn how I could work with type and its layout on spreads. While doing this, I wanted to design an editorial that would catch viewers&#39; eyes and be a product that could easily communicate its content and make viewers&#39; want to revisit the issue/publication. 
+        <section>
+            <h3><strong>My Goals</strong></h3>
+            <p>
+                After receiving my publication name and article focusing on the food industry, I chose to make my editorial food and wellness-focused. My primary goal was to learn how to effectively work with type and layout on spreads. I also aimed to design an editorial that captures attention, communicates content effectively, and encourages readers to revisit the issue or publication.
+            </p>
+        </section>
 
-<h3><strong>Problems I Encountered:</strong> </h3>
-The first couple weeks were rough, as I didn&#39;t really have a specific direction in which I wanted my publication to head in. Through the class, I experimented with physical collaging and basic type placements, and by week 6-7 of the class, I was getting a grasp on the path I was going in.
+        <section>
+            <h3><strong>Problems I Encountered</strong></h3>
+            <p>
+                The initial weeks were challenging as I didn’t have a clear direction for my publication. Through the class, I experimented with physical collaging and basic type placements. By weeks 6-7, I began to solidify the path for my design and layout.
+            </p>
+        </section>
 
-<h3><strong>Reflections:</strong></h3>
-<strong>What I Learned:</strong> This project and class heavily inflenced me and taught me a lot on typographic variations and how, with the right balance, it can work well with images, elements, and with the spread itself. Other than this, I was also able to reflect on the fact that when stuck, it always helps to turn to a different medium or method. </li>
-<br><strong>Changes?:</strong> If I could, I think I would&#39;ve liked to add more pages to my publication. I feel the article I received was a bit short and with a couple more pages, I would&#39;ve able to explore/experience more typographic variations and visual language. This and I would&#39;ve liked to try making a publication with my own media. </li>
-<br>Overall, I believe I learned a great deal through this project. On top of this, I am greatly satisfied with the end result of my publication and how it turned out. I believe that while not without flaws, I was able to achieve the goals I had set for myself in the beginning of this project and class. 
+        <section>
+            <h3><strong>Reflections</strong></h3>
+            <p>
+                <strong>What I Learned:</strong> This project taught me a lot about typographic variations and how they can harmonize with images, elements, and the overall spread with the right balance. Additionally, I learned that exploring different media or methods can help overcome creative blocks.
+            </p>
+            <p>
+                <strong>Changes?:</strong> If I could, I would add more pages to my publication to further explore typographic variations and visual language. I also would like to experiment with creating a publication using my own media for a more personal touch.
+            </p>
+            <p>
+                Overall, I learned a great deal through this project and am highly satisfied with the final outcome. Despite its flaws, I believe I achieved the goals I set for myself at the start of this project and class.
+            </p>
+        </section>
+    </main>
 
-<footer>
-    <br><h4><a href="persephone.html">Previous: Persephone Books</a> <a href="craigslist.html">Next: Craigslist</a></h4>
-    <br><p><a href="index.html">Home</a> <a href="about.html">About</a></p>
-    <br><p>© 2024 Sandy Chen</p>
-</footer>
+    <footer>
+        <p>
+            <a href="persephone.html">Previous: Persephone Books</a> | 
+            <a href="craigslist.html">Next: Craigslist</a>
+        </p>
+        <p>
+            <a href="index.html">Home</a> | 
+            <a href="about.html">About</a>
+        </p>
+        <p>© 2024 Sandy Chen</p>
+    </footer>
+</body>
+</html>
