--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
         <p>My goal is to inspire positive change in people&#39;s lives through innovative and compassion-driven designs.</p>
         <p>Graphic design is almost always somewhere around us, it struck me to how life-changing and important design truly is! As someone who was always taught and interested in traditional art, graphics was cool because it combined both traditional art and the growing digital world. Being able to allow artists to story-tell and convey strong messages through visual and mental aspects, I felt a sense of comfort and balance in this space.</p>
         <p>
-            <a href="https://www.instagram.com/sndyf1sh/">Instagram</a>
-            <a href="www.linkedin.com/in/sanch805">LinkedIn</a>
+            <a href="https://www.instagram.com/sndyf1sh/">Instagram </a> |
+            <a href="www.linkedin.com/in/sanch805">LinkedIn</a> |
             <a href="mailto:sanche0485@gmail.com">Email</a>
         </p>
 
@@ -67,7 +67,7 @@
     </main>
     
     <footer>
-        <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
+        <p><a href="index.html">Home</a> | <a href="about.html">About</a></p>
         <p>&copy; 2024</p>
     </footer>
 </body>
