--- a/index.html
+++ b/index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<media charset="utf-8">
-<link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="screens.css" media="screen">
+    <title>Sandy's Portfolio</title>
+</head>
+<body>
+    <header>
+        <h1 id="sandy-portfolio">Sandy's Portfolio</h1>
+        <h4>
+            Hey! I'm Sandy, a junior graphic &amp; UI/UX designer.
+            <br>Transforming imagination to design, one graphic at a time.
+        </h4>
+    </header>
 
- <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
- <h4>Hey! I&#39;m Sandy, a junior graphic &amp; UI/UX designer 
-    <br/>Transforming imagination to design, one graphic at a time</h4>
+    <main>
+        <section>
+            <h3><a href="craigslist.html">Flow (Craigslist App and Website Redesign)</a></h3>
+            <p>
+                Redesigning their system for better navigation and flow.
+                <br><strong>Tools:</strong> Figma, Canva, Optimal Workshop
+            </p>
+            <img src="/media/craigs_cover.jpg" alt="Craigslist redesign cover" width="900" height="600">
+        </section>
 
-<h3><a href="craigslist.html">Flow (Craigslist App and Website Redesign)</a></h3>
-    <p>Redesigning their system for better navigation and flow
-    <br>Figma, Canva, Optimal Workshop</br></p>
-    <img src="/media/craigs_cover.jpg" alt="craigs_cover" width="900" height="600">
+        <section>
+            <h3><a href="persephone.html">Brand &amp; Web Redesign (Persephone Books)</a></h3>
+            <p>
+                Redesigning their logo and brand; redesigning their website.
+                <br><strong>Tools:</strong> Illustrator, Photoshop, Figma
+            </p>
+            <img src="/media/pb_cover.jpg" alt="Persephone Books redesign cover" width="900" height="600">
+        </section>
 
-    <h3><a href="persephone.html">Brand &amp; Web Redesign (Persephone Books)</a></h3>
-    <p>Redesigning their logo and brand; redesigning their website
-    <br>Illustrator, Photoshop, Figma</br></p>
-    <img src="/media/pb_cover.jpg" alt="persephone-books" width="900" height="600">
-    
-    <h3><a href="salt.html">Coffee Editorial</a></h3>
-    <p>Indesign, Photoshop, Illustrator</p>
-    <img src="/media/coffee_mockup.jpg" alt="salt" width="900" height="600">
-    
-  <footer>
-    <br>
-    <p><a href="index.html">Home</a> <a href="about.html">About</a></p>
-    <br>
-    <p>© 2024 Sandy Chen</p>
-  </footer>
+        <section>
+            <h3><a href="salt.html">Coffee Editorial</a></h3>
+            <p>
+                <strong>Tools:</strong> InDesign, Photoshop, Illustrator
+            </p>
+            <img src="/media/coffee_mockup.jpg" alt="Coffee editorial cover" width="900" height="600">
+        </section>
+    </main>
+
+    <footer>
+        <p>
+            <a href="index.html">Home</a> | <a href="about.html">About</a>
+        </p>
+        <p>© 2024 Sandy Chen</p>
+    </footer>
+</body>
+</html>
